revised footer w logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta property="og:url" content="https://firewheelsupportservices.com" />
 	<meta property="og:description" content="" />
 	
-	<title>Firewheel | SAP Fieldglass advisory & support services</title>
+	<title>Firewheel | SAP Fieldglass advisory & support</title>
 	<link rel="icon" type="image/x-icon" href="logo.svg">
 	
 	<!--preload home page media
@@ -40,7 +40,7 @@
 
 <style>
 	html {background-color: black !important;}
-	.hero {background-image: url('') !important;}
+	/*.hero {background-image: url('') !important;}*/
 	.hero-body {background-color: rgba(0,0,0,0) !important;}
 </style>
 
@@ -50,7 +50,7 @@
 		<div class="hero-head"></div>
 		<div class="hero-body">
 			<div class="container">
-				<h1 class="title is-size-5-mobile animate__animated animate__slower	animate__fadeInDown">Technology advisory & support services for SAP Fieldglass engagements</h1>
+				<h1 class="title is-size-5-mobile animate__animated animate__slower	animate__fadeInDown">Technology advisory & support for SAP Fieldglass engagements</h1>
 				<h2 class="subtitle is-size-7-mobile">Firewheel Support Services LLC | 2024</h2>
 				<div class="buttons">
 					<a class="button button-style is-rounded" href="mailto:sapfieldglass.abhi@protonmail.com" target="_blank"><i class="fa-solid fa-circle-check"></i>&nbsp;Get in touch</a>
@@ -62,13 +62,18 @@
 			<div class="container">
 				<div class="columns is-mobile has-text-centered is-centered is-multiline is-vcentered">
 					<div class="column is-narrow">
-						<a class="icon is-size-4 foot-icon" href="https://linkedin.com/in/abhinav-m-kumar" target="_blank">
-							<i class="fa-brands fa-linkedin"></i>
+						<a class="icon is-size-4" href="./index.html">
+							<img src="logo.svg">
 						</a>
 					</div>
 					<div class="column is-narrow">
 						<a class="icon is-size-4 foot-icon" href="https://help.sap.com/docs/SAP_Fieldglass" target="_blank">
 							<i class="fa-solid fa-book-open"></i>
+						</a>
+					</div>
+					<div class="column is-narrow">
+						<a class="icon is-size-4 foot-icon" href="https://linkedin.com/in/abhinav-m-kumar" target="_blank">
+							<i class="fa-brands fa-linkedin"></i>
 						</a>
 					</div>
 				</div>
