new email contact in cta button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<h1 class="title is-size-5-mobile animate__animated animate__slower	animate__fadeInDown">Technology advisory & support for SAP Fieldglass engagements</h1>
 				<h2 class="subtitle is-size-7-mobile">Firewheel Support Services LLC | 2024</h2>
 				<div class="buttons">
-					<a class="button button-style is-rounded" href="mailto:sapfieldglass.abhi@protonmail.com" target="_blank"><i class="fa-solid fa-circle-check"></i>&nbsp;Get in touch</a>
+					<a class="button button-style is-rounded" href="mailto:abhi@firewheelsupportservices.com" target="_blank"><i class="fa-solid fa-circle-check"></i>&nbsp;Get in touch</a>
 				</div>
 			</div>
 		</div>
