2nd formsubmit attempt

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 				Contact
 			</h2>
 			<form action="https://formsubmit.co/abhi@firewheelsupportservices.com" method="POST">
+				<input type="text" name="name" required>
+				<input type="email" name="email" required>
+				<button type="submit">Send</button>
+				<!--
 				<div class="field">
 					<label class="label"></label>
 					<div class="control has-icons-left">
@@ -126,6 +130,7 @@
 						<i class="fa-solid fa-envelopes-bulk"></i>&nbsp;Send my message
 					</button>
 				</div>
+				-->
 			</form>
 		</div>
 	
