--- a/index.html
+++ b/index.html
@@ -108,11 +108,7 @@
 			<h2 class="subtitle">
 				Contact
 			</h2>
-			<form action="https://formsubmit.co/abhi@firewheelsupportservices.com" method="POST">
-				<input type="text" name="name" required>
-				<input type="email" name="email" required>
-				<button type="submit">Send</button>
-				<!--
+			<form action="https://formsubmit.co/2872289ca275b3e2303ae8258e263e35" method="POST">
 				<div class="field">
 					<label class="label"></label>
 					<div class="control has-icons-left">
@@ -130,7 +126,6 @@
 						<i class="fa-solid fa-envelopes-bulk"></i>&nbsp;Send my message
 					</button>
 				</div>
-				-->
 			</form>
 		</div>
 	
